src/styles.css
/* ... */
footer .instagram.icon { background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg viewBox='0 0 512 512' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m256 49.471c67.266 0 75.233 0.257 101.8 1.469 24.562 1.121 37.9 5.224 46.778 8.674a78.052 78.052 0 0 1 28.966 18.845 78.052 78.052 0 0 1 18.845 28.966c3.45 8.877 7.554 22.216 8.674 46.778 1.212 26.565 1.469 34.532 1.469 101.8s-0.257 75.233-1.469 101.8c-1.121 24.562-5.225 37.9-8.674 46.778a83.427 83.427 0 0 1-47.811 47.811c-8.877 3.45-22.216 7.554-46.778 8.674-26.56 1.212-34.527 1.469-101.8 1.469s-75.237-0.257-101.8-1.469c-24.562-1.121-37.9-5.225-46.778-8.674a78.051 78.051 0 0 1-28.966-18.845 78.053 78.053 0 0 1-18.845-28.966c-3.45-8.877-7.554-22.216-8.674-46.778-1.212-26.564-1.469-34.532-1.469-101.8s0.257-75.233 1.469-101.8c1.121-24.562 5.224-37.9 8.674-46.778a78.052 78.052 0 0 1 18.847-28.967 78.053 78.053 0 0 1 28.966-18.845c8.877-3.45 22.216-7.554 46.778-8.674 26.565-1.212 34.532-1.469 101.8-1.469m0-45.391c-68.418 0-77 0.29-103.87 1.516-26.815 1.224-45.127 5.482-61.151 11.71a123.49 123.49 0 0 0-44.62 29.057 123.49 123.49 0 0 0-29.065 44.62c-6.223 16.025-10.481 34.337-11.7 61.152-1.231 26.866-1.521 35.448-1.521 103.87s0.29 77 1.521 103.87c1.224 26.815 5.482 45.127 11.71 61.151a123.49 123.49 0 0 0 29.057 44.62 123.49 123.49 0 0 0 44.62 29.057c16.025 6.228 34.337 10.486 61.151 11.71 26.87 1.226 35.449 1.516 103.87 1.516s77-0.29 103.87-1.516c26.815-1.224 45.127-5.482 61.151-11.71a128.82 128.82 0 0 0 73.677-73.677c6.228-16.025 10.486-34.337 11.71-61.151 1.226-26.87 1.516-35.449 1.516-103.87s-0.29-77-1.516-103.87c-1.224-26.815-5.482-45.127-11.71-61.151a123.49 123.49 0 0 0-29.057-44.62 123.49 123.49 0 0 0-44.623-29.063c-16.025-6.223-34.337-10.481-61.152-11.7-26.866-1.231-35.448-1.521-103.87-1.521z' fill='%23fff'/%3E%3Cpath d='M256,126.635A129.365,129.365,0,1,0,385.365,256,129.365,129.365,0,0,0,256,126.635Zm0,213.338A83.973,83.973,0,1,1,339.974,256,83.974,83.974,0,0,1,256,339.973Z' fill='%23fff'/%3E%3Ccircle cx='390.48' cy='121.52' r='30.23' fill='%23fff'/%3E%3C/svg%3E%0A"); }

/* ======================= Front page ======================= */

.frontPageHeader { position: relative; padding: 0.1em 0 5.5em; background: linear-gradient(135deg, var(--primary-color-darker) 0%, var(--primary-color-main) 100%); }
.frontPageHeader:after { content: ''; position: absolute; bottom: -2px; width: 100%; height: 7.5em; background: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg enable-background='new 0 0 1920 304' version='1.1' viewBox='0 0 1920 304' xml:space='preserve' xmlns='http://www.w3.org/2000/svg' xmlns:cc='http://creativecommons.org/ns%23' xmlns:dc='http://purl.org/dc/elements/1.1/' xmlns:rdf='http://www.w3.org/1999/02/22-rdf-syntax-ns%23'%3E%3Cmetadata%3E%3Crdf:RDF%3E%3Ccc:Work rdf:about=''%3E%3Cdc:format%3Eimage/svg+xml%3C/dc:format%3E%3Cdc:type rdf:resource='http://purl.org/dc/dcmitype/StillImage'/%3E%3C/cc:Work%3E%3C/rdf:RDF%3E%3C/metadata%3E%3Cpath d='m0 274s199.42-199.25 579.28-124c603.7 119.59 767.59-47.24 988.45-121.65 174.18-58.679 353.63-2.4264 353.63-2.4264l-1.3646 278.07h-1920z' fill='%23101016'/%3E%3C/svg%3E%0A") no-repeat center bottom; background-size: cover; }
.frontPageHeader div { padding: 0 var(--page-vertical-padding-size); height: 100%; }
.frontPageHeader h2 { font-size: 250%; }
.frontPageHeader p { font-size: 100%; margin: 2em 0; }
.frontPageHeader p:last-child { margin-top: 2.5em; }

.threePoints { display: grid; grid-template-columns: repeat(3, calc((100% - 2em) / 3)); gap: 1em; margin-top: 3em; margin-bottom: 3em; padding: 0; }
.threePoints div { padding: 1em; text-align: center; background: var(--navbar-color); }
.threePoints .icon { font-size: 300%; color: var(--accent-color-main); }
@media screen and (max-width: 950px) {
    .threePoints { grid-template-columns: 100%; grid-column-gap: 1em; }
}

p.frontPageMainCallToAction { text-align: center; }

/* ======================= Upload page ======================= */

/* Upload form */
#fileUpload .title input { display: block; width: 100%; margin: 1em auto; border: none; border-bottom: 2px solid var(--primary-color-dark); text-align: center; background-color: var(--page-background-color); color: var(--light-text-color-high-emphasis); }
#fileUpload .imageFileSelector { width: 50%; margin: 0 auto; }

.imageFileSelector > div { position: relative; padding-top: 100%; }
.imageFileSelector > div > * { position: absolute; width: 100%; top: 0; right: 0; bottom: 0; left: 0; }
.imageFileSelector input { z-index: 3; opacity: 0; cursor: pointer; }
.imageFileSelector .helpText { z-index: 2; display: flex; border: 2px dashed var(--light-text-color-high-emphasis); box-sizing: border-box; }
.imageFileSelector .helpText > * { margin: auto; padding: 20%; text-align: center; }
.imageFileSelector .preview { z-index: 1; display: flex; }
.imageFileSelector .preview img { max-width: 100%; max-height: 100%; margin: auto; text-align: center; }

.imageFileSelector .removeButton { z-index: 4; width: 30px; height: 30px; padding: 0; line-height: 10px; bottom: auto; left: auto; font-size: 15px; text-align: center; border-radius: 2em; background: transparent; border: 1px solid var(--accent-color); color: var(--accent-color); cursor: pointer; transition: color 0.3s ease, background-color 0.3s ease; }
.imageFileSelector .removeButton:hover { background: var(--accent-color); color: var(--light-text-color-high-emphasis); }

#fileUpload .selectionStatus { margin-top: 1em; }
#fileUpload .selectionStatus.error { color: var(--error-color); }

#fileUpload .uploadButton { margin-top: 1em; }

#fileUpload .uploadStatus { margin-top: 1em; }
#fileUpload .uploadStatus div { margin-top: 1em; }
#fileUpload .uploadStatus.error div { color: var(--error-color); }
#fileUpload .uploadStatus.success div { border-radius: 3px; padding: 20px; background: var(--success-color); }
/* ... */

